--- a/package.json
+++ b/package.json
@@ -9,9 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.8",
+    "@chakra-ui/react": "^2.2.8",
+    "@emotion/react": "11",
+    "@emotion/styled": "11",
+    "axios": "^0.27.2",
+    "chakra-multiselect": "^0.2.1",
+    "collect.js": "^4.34.3",
+    "cookies-next": "^2.1.1",
+    "framer-motion": "6",
+    "moment": "^2.29.4",
+    "mysql": "^2.18.1",
     "next": "12.2.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "serverless-mysql": "^1.5.4"
   },
   "devDependencies": {
     "eslint": "8.22.0",
